# guardian-backend

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env.api  .env.db  .env.db.test  audit-report.py  create-access-token.py  main.py
app/core/: __init__.py  auth.py  config.py  scheduler.py
app/core/idp/: __init__.py  adfs.py  factory.py  keycloak.py
app/routers/: __init__.py  access_token.py  application.py  auth.py  country.py  entity.py  project.py  project_access.py  project_comment.py  status.py  user.py  util.py  websocket.py
app/routers/reporting/: __init__.py  pentest_report.py  report.py  report_language.py  report_scope.py  report_template.py  report_version.py
app/routers/tagging/: __init__.py  bugcrowd_vrt.py  mitre_cwe.py  tagging.py
design/: bugcrowd_vrt.json  bugcrowd_vrt_cvss_v3.json  bugcrowd_vrt_cwe.json  countries.json  cwe_hardware_design.xml  erm-model.drawio
docker/: .env.keycloak  .env.keycloak.db  Dockerfile.guardian  Dockerfile.keycloak  Dockerfile.nginx
docker/keycloak/data/: template-realm.json
docker/nginx/: nginx.conf
docker/nginx/includes/: ssl.conf
tests/: conftest.py
tests/core/: __init__.py  application.py  country.py  project.py  user.py
tests/core/entity/: customer.py  provider.py
tests/core/reporting/: measure.py  pentest_report.py  report_language.py  report_template.py
tests/core/tagging/: tagging.py
tests/data/: report_version_v1.0.json
tests/test_api/: __init__.py  conftest.py
tests/test_api/test_auth/: test_logout.py  test_token_creation.py  (+1 more)
(+84 files in other folders)
